--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -7,5 +7,7 @@ spring.h2.console.enabled=true
 #défini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
 
+eureka.client.serviceUrl.defaultZone: http://localhost:9102/eureka/
+
 
 mes-configs.limitDeProduits=5
